fix: minimize header blob on safari clipping

--- a/styles/global.css
+++ b/styles/global.css
@@ -133,6 +133,11 @@
   background-color: var(--surface-container-high) !important;
 }
 
+.skc-page-header__minimized .skc-page-header__blobs {
+  overflow: visible !important;
+  overflow-clip-margin: unset !important;
+}
+
 /* Inset card support
   Temporary until the SK Components library is updated.
   PS: this is not good code. Please don’t learn from this.
